--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
         <a class="navbar-brand" href="#">
             <img src="img/AcmeCorp.png" alt="Logotipo ACME Coporation" width="70px">
         </a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            
+        <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Sobre nós</a>
+                    <a href="#sobreNos" class="nav-link">Sobre nós</a>
                 </li>
                 <li>
                     <a href="#" class="nav-link">Aplicações</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link">Services</a>
+                    <a href="#" class="nav-link">Serviços</a>
                 </li>
                 <li>
                     <a href="#" class="nav-link">Contato</a>
@@ -35,11 +34,84 @@
         </div>
     </nav>
 
-    <section id="quemsomos">
-        <div class="container-fluid quemsomos text-center margin">
-            <p>Texto de apoio</p>
+    <section id="sobreNos">
+        <div class="container-fluid sobreNos text-center margin">
+
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam libero lorem, varius nec dictum eget,
+                pellentesque non urna. In quis luctus dui.
+            </p>
+
+            <hr>
+            <h3>Sobre nós</h3>
+            <img src="img/nightKeyboard.jpg" class="rounded-circle" alt="Teclado aceso a noite" width="200px"
+                height="200px">
+            <h6>Texto de exemplo simples</h6>
+            <hr>
         </div>
     </section>
+
+    <selection id="parceiros" class="margim">
+        <div class="container-fluid text-center margim parceiros">
+            <hr>
+            <h5>Parceiros</h5>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam libero lorem, varius nec
+                            dictum eget, pellentesque non urna. In quis luctus dui.
+                        </p>
+                        <img src="img/AcmeEvery.png" alt="Logotipo AcmeEvery" width="120px">
+                    </div>
+                    <div class="col-lg-4">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam libero lorem, varius nec
+                            dictum eget, pellentesque non urna. In quis luctus dui.
+                        </p>
+                        <img src="img/AcmeEvery.png" alt="Logotipo AcmeEvery" width="120px">
+                    </div>
+                    <div class="col-lg-4">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam libero lorem, varius nec
+                            dictum eget, pellentesque non urna. In quis luctus dui.
+                        </p>
+                        <img src="img/AcmeEvery.png" alt="Logotipo AcmeEvery" width="120px">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </selection>
+
+    <section id="servicos" class="margin">
+        <div class="container-fluid text-center margin servicos">
+            <hr>
+            <h5>Serviços</h5>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam libero lorem, varius nec
+                            dictum eget, pellentesque non urna. In quis luctus dui.
+                        </p>
+                        <img src="img/codePerspective.jpg" alt="Imagem de código fonte 1." width="500px" height="300px">
+                    </div>
+                    <div class="col-lg-6">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam libero lorem, varius nec
+                            dictum eget, pellentesque non urna. In quis luctus dui.
+                        </p>
+                        <img src="img/macbookWithCode.jpg" alt="Imagem de código fonte 2." width="500px" height="300px">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <footer class="container-fluid text-center margin parceiros bgfooter">
+        <p>Desenvolvido por Thiago da Costa - 2021</p>
+    </footer>
+
 
 </body>
 
